animation color change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h2 class="myname">It's B I D Y U T ...</h2>
+    <h2 class="myname">It's B I D Y U T </h2>
     <div class="clock">
         <div class="hour">
             <div class="hr" id='hr'></div>
