--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 
 <body>
     <h2 class="myname">It's B I D Y U T </h2>
+
+    <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <!-- clock class -->
     <div class="clock">
         <div class="hour">
             <div class="hr" id='hr'></div>
