Add Hare Krishna

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </div>
     </div>
 
+    <h2 class="hk">H A R E K R I S H N A</h2>
+
     <div class="toggle" onclick="toggle_button()"></div>
     <script src='script.js'></script>
 </body>
