--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         </div>
     </div>
 
-    <h2 class="hk">H A R E K R I S H N A</h2>
+    <h2 class="hk"> || Hare Krsna ||</h2>
 
     <div class="toggle" onclick="toggle_button()"></div>
+    <a style="display:none" href="https://theubuntulinux.com/"> The Ubuntu Linux</a>
     <script src='script.js'></script>
 </body>
 
